# encontro

./: .gitignore  Cargo.toml  README.md  build.rs  gen_crt.rs  gen_crt.sh  index.html  index.js  main.rs  package-lock.json  paths.rs  tsconfig.json
backend/: main.rs  paths.rs
frontend/: .gitattributes  main.ts  package-lock.json  package.json  tsconfig.json
frontend/static/: index.html  main.js
static/: main.js  style.css
