[package]
name = "encontro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encontro"
path = "main.rs"

[features]
default = []
gen_crt = ["rustls-pemfile"]

[dependencies]
tokio = { version = "1.35", features = ["sync"] }
rustls = { version = "0.21", default-features = false }
actix-web = { version = "4.9", features = ["rustls-0_21"] }
actix-files = { version = "0.6", default-features = false }
actix-web-actors = { version = "4.2", default-features = false }
actix = { version = "0.13.5", default-features = false, features = ["macros"] }
rcgen = { version = "0.13.2", default-features = false, features = ["pem", "ring", "crypto"] }

rustls-pemfile = { version = "1.0", default-features = false, optional = true }

[[bin]]
path = "gen_crt.rs"
name = "generate_certs"
required-features = ["gen_crt"]